Update the header slider, remove the main nav bugs on mobile

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,24 +1,106 @@
 .header {
     width: 100%;
     min-height: 100vh;
-    padding: 90px 0px;
     color: white;
-    background: no-repeat center/cover url('../assets/images/header-bg.jpg');
+    
 
     &__container {
         display: flex;
         flex-direction: column;
+        padding-top: 90px;
+        padding-bottom: 90px;
+        position: relative;
 
         & > * {
-            position: relative;
+            z-index: 2;
 
-            &:not(.header__content) {
-                z-index: 2;
+            &:not(.slider__navigation) {
+                position: relative;
             }
         }
 
         & > .navigation {
             z-index: 3;
+        }
+    }
+
+    &__slider {
+        position: absolute;
+
+        .slider__slide {
+            background: no-repeat center/cover url('../assets/images/header-bg.jpg');
+        }
+    }
+
+    .slider__button {
+        width: 90px;
+        height: 90px;
+        border-radius: 50%;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+
+        &::before, &::after {
+            content: '';
+            border-radius: 50%;
+            position: absolute;
+            left: 50%;
+            top: 50%; 
+        }
+
+        &::before {
+            width: 104px;
+            height: 104px;
+            border: 4px solid $grey;
+            transform: translate(-50%, -50%) scale(0.87);
+            transition: border-color 0.3s ease, transform 0.3s ease;
+        }
+
+        &::after {
+            width: 138px;
+            height: 138px;
+            border: 4px solid rgba($grey, 0.2);
+            visibility: hidden;
+            opacity: 0;
+            transform: translate(-50%, -50%) scale(0.2);
+            transition: all 0.4s ease;
+        }
+
+        svg {
+            fill: $grey;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            transition: fill 0.3s ease;
+        }
+
+        &:hover {
+            &::before {
+                border-color: $green;
+                transform: translate(-50%, -50%) scale(1);
+            }
+
+            &::after {
+                visibility: visible;
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1);
+            }
+
+            & svg {
+                fill: $white;
+            }
+        }
+
+        &.slider__button--prev {
+            left: 0;
+        }
+    
+        &.slider__button--next {
+            margin-left: auto;
+            transform: translateY(-50%) scaleX(-1);
+            right: 0;
         }
     }
 
@@ -46,7 +128,7 @@
 
     &__content {
         width: 100%;
-        padding: 100px 110px 36px 110px;
+        padding: 100px 230px 36px 230px;
         z-index: 1;
         text-align: center;
 
@@ -60,6 +142,7 @@
             font-weight: 900;
             z-index: 1;
             line-height: 1.05;
+            white-space: nowrap;
 
             .caption__letter {
                 display: inline-block;
@@ -149,6 +232,13 @@
         }
     }
 
+    @media only screen and (max-width: 1640px) {
+        &__content {
+            padding-left: 140px;
+            padding-right: 140px;
+        }
+    }
+
     @media only screen and (max-width: 1365px) {
         .header__caption .caption__letter {
             font-size: 250px;
@@ -160,10 +250,17 @@
             padding-left: 0;
             padding-right: 0;
         }
+
+        .slider__button {
+            display: none;
+        }
     }
 
     @media only screen and (max-width: 1023px) {
-        padding: 60px 0;
+        &__container {
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
 
         .header__caption .caption__letter {
             font-size: 200px;
@@ -177,7 +274,10 @@
     }
 
     @media only screen and (max-width: 480px) {
-        padding: 40px 0;
+        &__container {
+            padding-top: 40px;
+            padding-bottom: 40px;
+        }
 
         &__picture {
             display: none;
