--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -210,6 +210,7 @@
             transition: transform 0.3s ease 0.1s;
 
             .menu__item {
+                margin: 0;
                 margin-bottom: 30px;
     
                 &:last-child {
